fix header | Horizontal Scroll

--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -3,12 +3,11 @@ header {
     height: 60px;
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
-    padding-left: 20px;
 }
 
 header .logo {
     background-image: url("../images/logo.png");
     background-repeat: no-repeat;
-    width: 100%;
     height: 100%;
+    margin-left: 20px;
 }
